# LaplaceParallelBEM

./: .gitignore  CMakeLists.txt  README.md
geo/: Trax2.vtk  TraxStick3.vtk  cube.vtk  sphere.vtk
include/: IO_VTK.hpp  MPI_utils.hpp  geo_math.hpp  geometry.hpp
include/utils/: convergence.hpp
parallel/: CMakeLists.txt  ElectroHybridJob.sh  ElectroMPIJob.sh
parallel/src_mpi/: geo_math.cpp  main.cpp
results/: HybirdRuntimeTraxStick3.csv  OpenMPRuntimeTraxStick3.csv  PrecomputeOMPRuntime.csv  README.md
serial/: CMakeLists.txt  ElectroOMPJob.sh
serial/include/: geometry.hpp
serial/src/: IO_VTK.cpp  geo_math.cpp  main.cpp
src/: CMakeLists.txt  IO_VTK.cpp  geo_math.cpp  main.cpp  tmp_equivalent.cpp
src_mpi/: IO_VTK.cpp  geo_math.cpp  main.cpp
test/: CMakeLists.txt  array_assembly_test.cpp  geometry_test.cpp  numerical_kernels_test.cpp
